<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    tools:context=".ForDetailUser"
    tools:ignore="Overdraw">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/tv_onImgAvatar_detail"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@android:color/holo_red_dark"/>

    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_onNama_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_onImgAvatar_detail"
        android:textSize="14sp"
        android:text="@string/name"/>

    <TextView
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_onNama_detail"
        android:id="@+id/tv_onUsername_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/username" />

    <TextView
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onUsername_detail"
        android:id="@+id/tv_onCompany_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="14sp"
        android:text="@string/company"/>
    <TextView
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onCompany_detail"
        android:id="@+id/tv_onLocation_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="14sp"
        android:text="@string/location"/>
    <TextView
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onLocation_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_onRepository_detail"
        android:layout_marginTop="7dp"
        android:textSize="14sp"
        android:text="@string/repository"/>

    <androidx.viewpager.widget.ViewPager
        app:layout_constraintTop_toBottomOf="@id/tv_tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="310dp"
        android:id="@+id/tv_detailViewPager"/>

    <com.google.android.material.tabs.TabLayout
        app:layout_constraintTop_toBottomOf="@id/tv_onLocation_detail"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabRippleColor="@null"
        android:id="@+id/tv_tabs"
        android:layout_marginTop="35dp"
        android:minHeight="?actionBarSize"
        app:tabMode="fixed"
        app:tabIndicatorHeight="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>