<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image_Avatar"
        android:padding="2dp"
        app:civ_border_color="@android:color/darker_gray"
        app:civ_border_width="2dp"
        android:src="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tv_onUsername_card"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="0dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_onName_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_Avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/nunito_light"
        app:layout_constraintTop_toBottomOf="@id/tv_onUsername_card"
        app:layout_constraintStart_toEndOf="@id/image_Avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_onName_card"
        android:layout_width="240dp"
        android:textSize="14sp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:maxLines="3"
        android:text="@string/name"/>
    <TextView
        android:fontFamily="@font/nunito_light"
        app:layout_constraintTop_toBottomOf="@id/tv_onName_card"
        app:layout_constraintStart_toEndOf="@id/image_Avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_onCompany_card"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="0dp"
        android:maxLines="3"
        android:text="@string/company"/>
    <TextView
        android:fontFamily="@font/nunito_light"
        app:layout_constraintTop_toBottomOf="@id/tv_onCompany_card"
        app:layout_constraintStart_toEndOf="@id/image_Avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_onLocation_card"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="0dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:maxLines="3"
        android:text="@string/location"/>

</androidx.constraintlayout.widget.ConstraintLayout>