<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    tools:context=".AboutCreator"
    tools:ignore="Overdraw">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImages"
        android:layout_width="160dp"
        app:civ_border_color="@android:color/darker_gray"
        android:src="@drawable/damardjati"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/profileImages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="6dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_about_me"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_marginTop="47dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/my_workOns"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:textColor="@android:color/black"
            android:text="@string/about_mail"
            android:textSize="17sp"
            android:textAlignment="center"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>